added the cli app link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>Rajveer Yadav</title>
     <style>
         * {
             margin: 0;
@@ -144,10 +144,10 @@
     <div class="section">
         <h2>Projects</h2>
         <ul class="projects">
-            <li><a href="https://github.com/yourusername/ai-chatbot" target="_blank">CLI chat app</a> - Real time messaging app that runs in your terminal.</li>
-            <li><a href="https://github.com/yourusername/ecommerce-app" target="_blank">ML Metrics Tracker</a> - Visualizes machine learning training losses and inference metrics in real time.</li>
-            <li><a href="https://github.com/yourusername/computer-vision" target="_blank">Hindi-English Translator</a> - Transformer based hindi to english text model</li>
-            <li><a href="https://github.com/yourusername/data-dashboard" target="_blank">RayDB</a> - Redis like Vector Database</li>
+            <li><a href="https://ray-27.github.io/rayChat-Cli/" target="_blank">CLI chat app</a> - Real time messaging app that runs in your terminal.</li>
+            <li><a href="" target="_blank">ML Metrics Tracker</a> - Visualizes machine learning training losses and inference metrics in real time.</li>
+            <li><a href="" target="_blank">Hindi-English Translator</a> - Transformer based hindi to english text model</li>
+            <li><a href="" target="_blank">RayDB</a> - Redis like Vector Database</li>
         </ul>
     </div>
 
